--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.16.0",
+    "react-redux": "^7.2.4",
+    "sass": "^1.34.0",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.6",
+    "@types/styled-components": "^5.1.9",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.2.4"
   }
 }
