--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
