--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
     "sass": "^1.34.0",
